Added pictures and google maps api

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@
 # Production URL
 NEXT_PUBLIC_SITE_URL=https://www.cph-acoustics.com
 
+# Google Maps (optional - currently using free embed method)
+# If you want enhanced features, get a key from: https://console.cloud.google.com/google/maps-apis
+# IMPORTANT: Use GOOGLE_MAPS_API_KEY (without NEXT_PUBLIC prefix) to keep it private
+# GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+
 # Contact Form (if you want to add email functionality later)
 # EMAIL_SERVICE_API_KEY=your_email_service_key
 # EMAIL_FROM=noreply@cph-acoustics.com
